--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Link Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+        .container {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            width: 80%;
+            max-width: 600px;
+        }
+        h1 {
+            color: #333;
+            margin-top: 0;
+        }
+        p {
+            font-size: 18px;
+            margin: 20px 0;
+        }
+        .link-button {
+            display: inline-block;
+            background-color: #4285F4;
+            color: white;
+            text-decoration: none;
+            padding: 12px 24px;
+            border-radius: 4px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+        .link-button:hover {
+            background-color: #3367D6;
+        }
+    </style>
 </head>
 <body>
-    <h1>Click the link below:</h1>
-    <p>Visit <a href="https://script.google.com/macros/s/AKfycbyGc9wlY5lf8MyvJ1R3pYqOJnzRvvSQFPTMHl8EDqS1aQvL8_tqSJ5eiawRlPd0H7HPiw/exec">Example Website</a></p>
+    <div class="container">
+        <h1>Welcome to Your Resource</h1>
+        <p>Click the button below to access the content:</p>
+        <a class="link-button" href="https://script.google.com/macros/s/AKfycbyGc9wlY5lf8MyvJ1R3pYqOJnzRvvSQFPTMHl8EDqS1aQvL8_tqSJ5eiawRlPd0H7HPiw/exec">Access Content</a>
+    </div>
 </body>
 </html>
